--- a/indexmobile.css
+++ b/indexmobile.css
@@ -5,6 +5,12 @@
     CSS specified defaults
    -----------------------------------------
 */
+*{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+    
+}
 @media only screen and (max-width:918px){
 body{
     width: 100%;
@@ -101,9 +107,6 @@ margin: 0px 05%;
 flex-wrap: wrap;
 justify-content: center;
 z-index: 3;
-/* border: 2px solid white; */
-/* position: relative;
-left: auto; */
 
 }
 
@@ -116,9 +119,7 @@ display: flex;
 ul li{
 display: flex;
 flex-direction: column;
-/* text-align: left; */
-/* background: red; */
-/* padding: 20px 40px 09px; */
+flex-wrap: wrap;
 font-size: 17px;
 font-weight: lighter;
 border: white solid 1px;
@@ -127,17 +128,66 @@ border: white solid 1px;
 .active a,.active.inst a{
     color:white;
     /* background: #99fa99; */
-    height: ;
+    height: auto;
     width: 100%;
     outline: none;
     text-decoration: none;
     
 }
 .active{
+    
     background: #99fa99b9 ;
-    color: blue;
+    /* color: blue; */
     padding: 20px 40px 09px;
 }
+.active.classes ul{
+    /* background: blue !important; */
+    width:  auto!important;
+    /* height: 20px; */
+    position: relative;
+    top: 10px;
+    left: -41px;
+    clear: right;
+}
+.active.classes li{
+    /* background: red; */
+    width: 100%;
+    height: 3rem;
+}
+.active.inst{
+    height: 54px !important;
+    /* background: blue; */
+}
+.about.inst,.active.inst{
+    height:24px;
+}
+.active.inst a{
+    /* background: black; */
+    width: 82%;
+    position: absolute;
+    top: 151px;
+    left:00px;
+    margin: 0px;
+}
+.about.inst a{
+    width: 123%;
+    position: absolute;
+    top: 0px;
+    left:00px;
+    margin: 0px;
+    padding: 20px 60px;
+    padding-right: 0px;
+    /* border: white solid 1px;
+    border-right: 0px solid black; */
+}
+.about.inst a:hover{
+    padding: 15px 60px;
+    padding-right: 0px;
+}
+
+
+
+
 
 .about:hover{
     background: #077054 ;
@@ -172,11 +222,7 @@ border: white solid 1px;
     left: 34%; */
     background: brown;
 }
-/* .about ul li{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-} */
+
 .about.classes:hover ul,
 .active.classes:hover ul {
     display:none;
@@ -185,24 +231,7 @@ border: white solid 1px;
     /* width: 100%; */
     
 }
-/* .classes {
-    display: flex;
-    flex-direction: row;
-    
-}
-.classes:hover{
-    display: flex;
-    flex-direction: column;
-}
 
-.classes a {
-    width: 100%;
-}
-.classes a:hover{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-} */
 .about.classes ul.expand,
 .active.classes ul.expand  {
     display:flex;
@@ -222,6 +251,8 @@ border: white solid 1px;
     cursor: pointer;
     border-left: white solid .5px;
     height: 50px;
+    
+    
 }
 #expand.expand{
     display: none;
@@ -331,7 +362,6 @@ div.rectangle{
 .better{
     flex:1;
     order:1;
-    /* border: 2px solid; */
     padding: 0px 0px;
     margin: 0px;
 }
@@ -351,16 +381,10 @@ h2{
     width: 30%;
     background: url('./lady-in-yoga.jpg');
     background-repeat: no-repeat;
-    
     height: auto;
     display: flex;
-    /* flex-flow: row-reverse; */
-    /* float:right; */
-
     padding: 0px 50px;
     margin: 0px;
-    /* position: relative;
-    top: -150px; */
 }
 
 
@@ -456,6 +480,8 @@ figcaption{
     /* background: red; */
 }
 figure img{
+    width:100%;
+    height: auto;
     margin: 0px 0px 0px 5px;
    
 }
@@ -556,7 +582,7 @@ button{
 }
 div.blogtext1{
     /* background: pink; */
-    flex-basis: 1o00%;
+    flex-basis: 100%;
     margin: 0px 0px 0px 20px;
     
 }
@@ -615,60 +641,5 @@ outline: none;
 padding: 0px;
 }
 
-
 }
 
-
-/* mobile*/
-/*
-@media (max-width:720px){
-    div.rectangle{
-         flex-wrap:wrap; 
-        padding: 0px;
-        margin: 0px 10%;
-        flex-direction: column;
-    }
-    .imageyoga{
-        background: url('./lady-in-yoga.jpg');
-        flex-wrap: wrap;
-        width: 100%;
-        height: auto;
-        justify-content: center;
-        
-        background-repeat: no-repeat;
-    }
-
- 
-    .yoga{
-        background: pink;
-        flex-wrap: wrap;
-        font-size: 3rem;
-        text-align: center;
-        width: 100%;
-        justify-content: center;
-    }
-     .yoga p{
-        font-size: 40px ;
-    } 
-*/
-}
-
-/* Tablet Landscape
-@media screen and (max-width: 1060px) {
-    #primary { width:67%; }
-    #secondary { width:30%; margin-left:3%;}  
-
-}
-
-
-Tabled Portrait
-@media screen and (max-width: 768px) {
-    #primary { width:100%; }
-    #secondary { width:100%; margin:0; border:none; }
-} */
-/* 
-@media screen and (max-width:480px){
-    body{
-        background-color: blueviolet;
-    }
-} */
