--- a/index.css
+++ b/index.css
@@ -1,480 +1,474 @@
-
-
-
 /* -----------------------------------------
     CSS specified defaults
    -----------------------------------------
 */
-@media only screen and (min-width:918px){
-body{
+* {
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 62.5%;
+  word-wrap: break-word;
+}
+
+@media only screen and (min-width: 718px) {
+  body {
     width: 100%;
     background: #077054;
     color: #315f52;
     padding: 0px;
     margin: 0px;
-    font-size: 14px;
     font-family: 'lato-regular';
     font-weight: lighter;
-    /* line-height: 20px; */
-    /* src: url('lato-regular-webfont.ttf'); */
-}
-@font-face{
+  }
+  @font-face {
     font-family: 'lato-regular';
-    src: url('./lato-regular-webfont.ttf');
+    src: url("./lato-regular-webfont.ttf");
     font-weight: lighter;
-}
-@font-face {
-	font-family: 'nixie_oneregular';
-    src: url('./nixieone-regular-webfont.ttf');
-}
-html{
+  }
+  @font-face {
+    font-family: 'nixie_oneregular';
+    src: url("./nixieone-regular-webfont.ttf");
+  }
+  html {
     width: 100%;
-}
-
-/* -----------------------------------------
-    This is for header 
-   -----------------------------------------
-*/
-.mobile-menu{
+  }
+  /* -----------------------------------------
+        This is for header 
+       -----------------------------------------
+    */
+  .mobile-menu {
     display: none;
-}
-.mobile-ex{
+  }
+  .mobile-ex {
     display: none;
-}
-h1{
+  }
+  h1 {
     text-align: center;
     font-family: 'lato-regular';
-    color:  #99fa99;
+    color: #99fa99;
     padding: 30px 0px 0px;
     margin: 0px 0px;
-    font-size: 50px;
-    line-height: 50px;
+    font-size: 5rem;
+    line-height: 3.5rem;
     font-weight: lighter;
-    
     /* background-color: pink; */
-}
-h3{
-text-align: center;
-font-family: 'nixie_oneregular';
-font-weight: lighter;
-font-size: 26px;
-color:  #b6d8cf;
-padding: 07px 0px 20px;
-margin: 0px;
-
-
-}
-/* nav ul{
-    align-self : center;
-} */
-
-ul {
-/* text-align: left; */
-list-style-type: none;
-display: inline-flex;
-/* background-color: black; */
-padding: 0px;
-margin: 0px 16%;
-/* border: 2px solid white; */
-/* position: relative;
-left: auto; */
-
-
-}
-ul li{
-display: inline-flex;
-/* text-align: left; */
-padding: 20px 60px 09px;
-font-size: 17px;
-font-weight: lighter;
-
-}
-.active a,.active.inst a{
-    color:#99fa99;
+  }
+  h3 {
+    text-align: center;
+    font-family: 'nixie_oneregular';
+    font-weight: lighter;
+    font-size: 2.6rem;
+    color: #b6d8cf;
+    padding: 07px 0px 20px;
+    margin: 0px;
+  }
+  /* nav ul{
+        align-self : center;
+    } */
+  ul {
+    list-style-type: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    padding: 0px;
+    margin: 0px 16%;
+  }
+  ul li {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    padding: 20px 0px 09px;
+    font-size: 2rem;
+    font-weight: lighter;
+  }
+  .active a, .active.inst a {
+    color: #99fa99;
     outline: none;
     text-decoration: none;
-    
-}
-
-/* .about:hover{
-    background: blue;
-} */
-.about a{
-   outline: none; 
-   color: #b6d8cf;
-   text-decoration: none;
-}
-.about a:hover{
-    color:#d3a3ff;
+  }
+  .about a {
     outline: none;
-    
-}
-.about ul {
+    color: #b6d8cf;
+    text-decoration: none;
+  }
+  .about a:hover {
+    color: #d3a3ff;
+    outline: none;
+  }
+  .about ul {
     display: none;
-	left: 0;
-	list-style: none outside none;
-	margin: 0;
-	padding: 0px;
-	position: absolute;
-    top: 11.55rem;
-    left: 43%;
+    left: 0;
+    list-style: none outside none;
+    margin: 0;
+    padding: 0px;
+    position: absolute;
+    top: 170px;
+    left: 50%;
+    -webkit-transform: translate(-50%, -28%);
+            transform: translate(-50%, -28%);
     /* background: brown; */
-}
-.about.classes:hover ul {
-    display:flex;
-    
-}
-.about ul li {
-    background:#077054;;
-    padding: 10px 30px;
+  }
+  .about.classes:hover ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-}
-
-
-
-.active ul {
+  }
+  .about ul li {
+    background: #077054;
+    padding: 10px 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .active ul {
     display: none;
-	left: 0;
-	list-style: none outside none;
-	margin: 0;
-	padding: 0px;
-	position: absolute;
-    top: 11.55rem;
-    left: 43%;
+    left: 0;
+    list-style: none outside none;
+    margin: 0;
+    padding: 0px;
+    position: absolute;
+    top: 170px;
+    left: 50%;
+    -webkit-transform: translate(-50%, -30%);
+            transform: translate(-50%, -30%);
     /* background: brown; */
-}
-.active.classes:hover ul {
-    display:flex;
-    
-}
-.active ul li {
-    background:#077054;;
-    padding: 10px 30px;
+  }
+  .active.classes:hover ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-}
-
-div.rectangle{
-    box-sizing: content-box;
+  }
+  .active ul li {
+    background: #077054;
+    padding: 10px 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  div.rectangle {
+    -webkit-box-sizing: content-box;
+            box-sizing: content-box;
     background: white;
     padding: 40px 0px;
     margin: 0% 10%;
     min-height: 827px;
-    width: ;
-    /* display: flex; */
-
-}
-
-/* -----------------------------------------
-    This is for homepage
-   -----------------------------------------
-*/
-.yoga{
+  }
+  /* -----------------------------------------
+        This is for homepage
+       -----------------------------------------
+    */
+  .yoga {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    /* border: 3px solid; */
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: 70%;
     padding: 0px;
     margin: 0px;
-    /* flex-wrap: wrap; */
-    /* background: yellow; */
-    justify-content: center;   
-    
-}
-
-.yogs{
-    flex: 1;
-    /* border: 2px solid; */
-    /* order: 3; */
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    z-index: 3;
+  }
+  .yogs {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
     padding: 5px;
-
-}
-
-.purple{
+  }
+  .purple {
     background: #d3a3ff;
-    flex:1;
-    /* order:2; */
-    
-    width: 130px;
-    height: 10px;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    width: 40%;
+    height: 2%;
+    margin: auto;
     /* border: 2px solid; */
-    position: relative;
-    left:40%;
-    top: 30px ;
-}
-
-.better{
-    flex:1;
-    order:1;
+  }
+  .better {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
     /* border: 2px solid; */
-}
-
-h2{
+  }
+  h2 {
     text-align: center;
     font-family: 'nixie_oneregular';
-    font-size: 5rem;
+    font-size: 10rem;
     text-align: center;
     color: #21a51e;
     font-weight: lighter;
-
-}
-
-.imageyoga{
+  }
+  .imageyoga {
     width: 30%;
-    background: url('./lady-in-yoga.jpg');
+    background: url("./lady-in-yoga.jpg");
     background-repeat: no-repeat;
-    
     height: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row-reverse;
-    /* float:right; */
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-flow: row-reverse;
+            flex-flow: row-reverse;
     padding: 30px;
     margin: 0px;
-    /* position: relative;
-    top: -150px; */
-}
-
-
-/* -----------------------------------------
-    This is for about 
-   -----------------------------------------
-*/
-.heade{
+  }
+  /* -----------------------------------------
+        This is for about 
+       -----------------------------------------
+    */
+  .heade {
     font-size: 1.3rem;
     font-family: 'nixie_oneregular';
-    /* background: blue; */
     margin: 0px;
-}
-
-/* -----------------------------------------
-    This is for classes 
-   -----------------------------------------
-*/
-.class{
+  }
+  .imageyogaa {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: auto;
+    margin: auto;
+  }
+  .imageyogaa img {
+    width: 100%;
+    height: auto;
+  }
+  /* -----------------------------------------
+        This is for classes 
+       -----------------------------------------
+    */
+  .class {
     width: 100%;
     /* background: brown; */
     margin: 0px 0px 0px;
-    /* position: relative;
-    right: 40px; */
+    font-size: 2rem;
     justify-self: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-}
-
-.classtime{
+  }
+  .classtime {
     margin: 0px 0px 0px 50px;
     line-height: 30px;
     /* background: #99fa99; */
-    width: 70%;
-    /* display: flex;
-    flex-wrap: wrap; */
-    
-}
-
-.imageyogaa{
-    width: 40%;
+    width: 50%;
+  }
+  .imageyogaa {
+    width: auto;
     margin: 0px 20px;
-}
-.classhead{
-    
+  }
+  .classhead {
     font-size: 2.3rem;
     font-family: 'nixie_oneregular';
     /* background: blue; */
     padding: 0px;
     margin: 0px 0px 0px 50px;
-    /* align-self: auto; */
-    
-    
-
-}
-/* .classhead.boy{
-    position: relative;
-    bottom: 28%;
-    right: 17%;
-    background: red;
-} */
-.head{
-    font-size: 1.3rem;
+  }
+  .head {
+    font-size: 1.7rem;
     font-family: 'nixie_oneregular';
     /* background: black; */
-}
-
-/* -----------------------------------------
-    This is for instructors 
-   -----------------------------------------
-*/
-#instructors{
+  }
+  /* -----------------------------------------
+        This is for instructors 
+       -----------------------------------------
+    */
+  #instructors {
     margin: 0px 0px 0px 50px;
     line-height: 30px;
     /* background: #99fa99; */
     width: 70%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    
-}
-figure{
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  figure {
     /* height: 200px; */
     margin: 0px 30px;
     /* background: blue; */
-    row-gap: 2px ;
-}
-figcaption{
+    row-gap: 2px;
+  }
+  figcaption {
     text-align: center;
     font-family: 'nixie_oneregular';
-    font-size: 1rem;
+    font-size: 2rem;
     /* background: red; */
-}
-figure img{
+  }
+  figure img {
     margin: 0px;
     background: yellow;
     /* row-gap: 2px; */
-}
-
-/* -----------------------------------------
-    This is for contacts 
-   -----------------------------------------
-*/
-.inquiries{
+  }
+  /* -----------------------------------------
+        This is for contacts 
+       -----------------------------------------
+    */
+  .inquiries {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding: 8% 0px 0px;
     /* background: blue; */
-    
-}
-form{
-    
+  }
+  form {
     /* background: black; */
-    font-size: 16px;
-    flex-basis: 500px;
+    font-size: 2rem;
+    -ms-flex-preferred-size: 80%;
+        flex-basis: 80%;
     height: 70%;
     padding: 0px 0px 0px 0px;
-    
-       
-}
-input{
+  }
+  input {
     height: 40px;
     width: 100%;
     background: #d1d3d4;
     border: none;
     border-radius: 3px;
     margin: 10px 0px;
-}
-
-#message{
+  }
+  #message {
     height: 222px;
     border: none;
     border-radius: 7px;
     width: 100%;
     background: #d1d3d4;
-}
-button{
-    position: relative;
-    left: 89%;
-    margin: 0px 0px 0px;
+  }
+  button {
+    float: right;
+    margin: 0px;
     padding: 0px;
     border: 0px;
     border-radius: 6px;
-}
-.submit{
+  }
+  .submit {
     background: #077054;
     color: #b6d8cf;
     padding: 0px px;
     border-radius: 6px;
-}
-.submit:hover{
+    font-size: 1.4rem;
+  }
+  .submit:hover {
     background: #d3a3ff;
     color: black;
-}
-
-/* -----------------------------------------
-    This is for blog
-   -----------------------------------------
-*/
-
-.blog{
+  }
+  /* -----------------------------------------
+        This is for blog
+       -----------------------------------------
+    */
+  .blog {
     /* background: brown; */
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin: 0px;
     /* padding: 10% 0px; */
-    flex-direction: column;
-    align-content: space-around;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-line-pack: distribute;
+        align-content: space-around;
     /* height: 720px; */
-    
-}
-.blog1{
+  }
+  .blog1 {
     /* background: black; */
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
     margin: 50px 0px;
-    
-    /* justify-content: center;
-    align-content: flex-start;
-    align-items: flex-start; */
-   
-}
-.blog1 img{
-    
+    margin-right: 5%;
+    font-size: 3.5rem;
+  }
+  .blog1 img {
     padding: 0px;
-    margin:0px;
+    margin: 0px;
     /* flex-basis: 30%; */
     margin: 0px 0px 0px 50px;
-}
-div.blogtext1{
+  }
+  div.blogtext1 {
     /* background: pink; */
-    flex-basis: 60%;
+    -ms-flex-preferred-size: 60%;
+        flex-basis: 60%;
     margin: 0px 0px 0px 20px;
-    
-}
-
-
-
-/* -----------------------------------------
-    This is for footer
-   -----------------------------------------
-*/
-
-.foot{
+  }
+  /* -----------------------------------------
+        This is for footer
+       -----------------------------------------
+    */
+  .foot {
     /* box-sizing: content-box; */
     /* background: blue; */
-    margin: 0px 10% 90px;
+    margin: 2% 10% 20vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     font-family: 'lato-regular';
-    color:  #99fa99;
+    color: #99fa99;
     font-weight: lighter;
-    
-}
-.foot div{
+  }
+  .foot div {
     /* border: 2px solid; */
     padding: 3px;
-}
-div.location{
-    flex-basis: 70%;
-    font-size: 1.5rem;
+  }
+  div.location {
+    -ms-flex-preferred-size: 70%;
+        flex-basis: 70%;
+    font-size: 2.5rem;
     font-weight: normal;
-}
-div.location span{
-    font-size:0.8rem;
+  }
+  div.location span {
+    font-size: 1.1rem;
     font-weight: normal;
     color: #b6d8cf;
-}
-div.icon{
-    flex-basis:30%;
+  }
+  div.icon {
+    -ms-flex-preferred-size: 30%;
+        flex-basis: 30%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: flex-end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
     /* background: black; */
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     font-family: 'lato-regular';
-    color:  #99fa99;
-}
-
-.icon .remo{
+    color: #99fa99;
+  }
+  .icon .remo {
     margin: 0px 13px;
+  }
+  .remo {
+    text-decoration: none;
+    outline: none;
+    /* background: black; */
+    padding: 0px;
+  }
 }
-.remo{
-text-decoration: none;
-outline: none;
-/* background: black; */
-padding: 0px;
-}
-
-
-}
-
+/*# sourceMappingURL=index.css.map */
